--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">ilkMuhabbet</string>
     <string name="save_profile">Save Profile</string>
     <string name="phone_number">Phone Number</string>
-    <string name="about_you">About You</string>
+    <string name="about_you">About</string>
     <string name="surname">Surname</string>
-    <string name="full_name">Full Name</string>
+    <string name="full_name">Name</string>
     <string name="lightweight_instant_messaging">Lightweight instant messaging</string>
     <string name="close">Close</string>
     <string name="email">Email</string>
@@ -29,7 +29,7 @@
     <string name="me">"Me: "</string>
     <string name="last_message">"Last Message: "</string>
     <string name="add_user_via_email">Add user via email</string>
-    <string name="add_user">Add User</string>
+    <string name="add_user">Add Friend</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
     <string name="decline">Decline</string>
@@ -42,4 +42,5 @@
     <string name="user_block_opened_and_accept_as_friend">User Block Opened And Accept As Friend</string>
     <string name="you_are_blocked_by_user">You Are Blocked by User</string>
     <string name="add_new_message">Add New Message</string>
+    <string name="next">Next</string>
 </resources>
