--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -31,4 +31,6 @@
     <string name="online">Çevrimiçi</string>
     <string name="offline">Çevrimdışı</string>
     <string name="welcome">Hoşgeldiniz</string>
+    <string name="name_field_is_empty">İsim alanını boş bıraktınız!</string>
+    <string name="about_field_is_empty">Hakkında alanını boş bıraktınız!</string>
 </resources>
