--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -33,4 +33,5 @@
     <string name="welcome">Hoşgeldiniz</string>
     <string name="name_field_is_empty">İsim alanını boş bıraktınız!</string>
     <string name="about_field_is_empty">Hakkında alanını boş bıraktınız!</string>
+    <string name="title_activity_splash">SplashActivity</string>
 </resources>
