--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="name_field_is_empty">Name field is empty!</string>
     <string name="about_field_is_empty">About field is empty!</string>
     <string name="title_activity_splash">SplashActivity</string>
+    <string name="search">Search</string>
 </resources>
